# AnDocGen

./: .env.example  .gitignore  .gitmodules  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  evaluation.md  individual_assignment.md  input_preparation.md  prototype.md  requirements.md
docs/examples/: prompt_process_function.md
eval/python-qrcode/: python-qrcode.config.yaml
eval/python-qrcode/generated_docs/: LUT.py.md  README.md  __init__.py.md  (+8 more)
examples/edge_cases/: dynamic.py
examples/mini_api/: __init__.py  config.deepseek-v4-flash.yaml  config.gpt-oss-20b.yaml  config.ollama.yaml  config.qwen2.5-coder.yaml  config.qwen3-235b.yaml  config.yandex.yaml  config.yandexgpt5-lite.yaml  handlers.py  storage.py
examples/mini_calculator/: calculator.py  config.ollama.yaml
examples/mini_library/: README.md  __init__.py  cli.py  config.ollama.yaml  config.py  exceptions.py  models.py  services.py  storage.py
src/andocgen/: __init__.py  cli.py  config.py  pipeline.py
tests/: conftest.py  test_block_enricher.py  test_call_graph.py  test_config_mock.py  test_config_paths.py  test_context_brief.py  test_entity_pipeline.py  test_entity_validator.py  test_formatter.py  test_markdown_writer.py  test_openai_integration.py  test_openai_provider.py  test_openai_yandex_integration.py  test_parallel_workers.py  test_pipeline_integration.py  test_progress.py  test_python_parser.py  test_sanitizer.py  test_section_parser.py  test_validator.py  test_waves.py
tests/fixtures/: config.mock.yaml  config.openai.yaml
(+155 files in other folders)
