[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andocgen"
version = "0.1.0"
description = "Automatic technical documentation generator from source code using LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.86",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
andocgen = "andocgen.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
